[BUGFIX] Fix visible outline for Camino textmedia teaser elements
Resolves: #108677
Releases: main
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/92637
Tested-by: Juliane Wundermann <j.wundermann@familie-redlich.de>
Tested-by: core-ci <typo3@b13.com>
Tested-by: Andreas Nedbal <andy@pixelde.su>

--- a/typo3/sysext/theme_camino/Resources/Public/Css/_textmedia-teaser.css
+++ b/typo3/sysext/theme_camino/Resources/Public/Css/_textmedia-teaser.css
@@ -116,13 +116,27 @@ body {
         background: var(--textmedia-teaser-background-color-focus);
         border-color: var(--textmedia-teaser-border-color-focus);
         border-radius: var(--corners-l);
-        outline: 2px solid var(--textmedia-teaser-outline-focus);
 
         .button {
             border-radius: 10px;
             border-color: var(--button-border-color);
             outline: 2px solid var(--button-secondary-color-focus);
             background: var(--button-color-focus);
+        }
+
+        /*
+            We intentionally disable the outline and use a pseudo ::after here, since
+            the image transformation scales the image and visible overlaps the outline.
+        */
+        outline: none;
+        &::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            border: 2px solid var(--textmedia-teaser-outline-focus);
+            border-radius: var(--corners-l);
+            pointer-events: none;
+            z-index: 10;
         }
     }
 }
